# Player_ffmpeg

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chen/player_ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/chen/player_ffmpeg/: DNPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chen/player_ffmpeg/: ExampleUnitTest.java
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
gradle/wrapper/: gradle-wrapper.properties
